--- a/style_config.json
+++ b/style_config.json
@@ -1,230 +1,212 @@
 {
-  "toplevelheads": {
-    ".Section-Ad-Cardssac": "preface",
-    ".Section-Blank-Pagessblank": "preface",
-    ".Section-Titlepagesstit": "titlepage",
-    ".Section-Copyright-Pagesscr": "copyright-page",
-    ".Section-Dedicationssded": "dedication",
-    ".Section-Epigraphssepi": "preface",
-    ".Section-Contentssstoc": "preface",
-    ".Section-Halftitlesshtit": "halftitlepage",
-    ".Section-Forewordssfw": "foreword",
-    ".Section-Introduction-frontmatterssif": "introduction",
-    ".Section-Acknowledgmentsssack": "acknowledgments",
-    ".Section-Chaptersschap": "chapter",
-    ".Section-Appendixssapp": "appendix",
-    ".Section-Notesssnotes": "appendix",
-    ".Section-About-Authorssata": "appendix",
-    ".Section-Partsspart": "part"
-  },
   "partheads": [
-    ".Section-Partsspart"
+    "Section-Partspt"
   ],
   "headingparas": [
-    ".BMHeadbmh",
-    ".BMHeadNonprintingbmhnp",
-    ".BMHeadALTabmh",
-    ".AppendixHeadaph",
-    ".AboutAuthorTextHeadatah",
-    ".PartNumberpn",
-    ".PartTitlept",
-    ".ChapTitlect",
-    ".ChapTitleALTact",
-    ".ChapTitleNonprintingctnp",
-    ".FMHeadfmh",
-    ".FMHeadNonprintingfmhnp",
-    ".FMHeadALTafmh",
-    ".FrontSalesTitlefst",
-    ".BOBAdTitlebobt",
-    ".AdCardMainHeadacmh",
-    ".TitlepageBookTitletit",
-    ".HalftitleBookTitlehtit",
-    ".VolumeNumbervoln",
-    ".VolumeTitlevolt"
+    "AboutAuthorTextHeadatah",
+    "AdCardMainHeadacmh",
+    "AppendixHeadaph",
+    "BMHeadbmh",
+    "BMHeadALTabmh",
+    "BMHeadNonprintingbmhnp",
+    "BOBAdTitlebobt",
+    "ChapTitlect",
+    "ChapTitleALTact",
+    "ChapTitleNonprintingctnp",
+    "FMHeadfmh",
+    "FMHeadALTafmh",
+    "FMHeadNonprintingfmhnp",
+    "FrontSalesTitlefst",
+    "HalftitleBookTitlehtit",
+    "PartNumberpn",
+    "PartTitlept",
+    "TitlepageBookTitletit",
+    "VolumeNumbervoln",
+    "VolumeTitlevolt"
   ],
   "extractparas": [
-    ".Extractext",
-    ".ExtractSourceexts",
-    ".Extract-Newspapernews",
-    ".Extract-Diaryextd",
-    ".Extract-Transcripttrans",
-    ".Extract-NoIndentext1",
-    ".Extract-BulletListextbl",
-    ".Extract-NumListextnl",
-    ".ExtractHeadexth",
-    ".Extract-VerseorPoetryextv",
-    ".Extract-Noteextn",
-    ".Extract-NoteHeadextnh",
-    ".Extract-Headlineexthl",
-    ".Extract-Emailextem",
-    ".Extract-EmailHeadingemh",
-    ".Extract-Websiteextws",
-    ".Extract-SongLyricextsl",
-    ".Extract-BusinessCardextbc",
-    ".Extract-Telegramtel",
-    ".Extract-Inscriptionins",
-    ".Extract-ScheduleofEventssch",
-    ".LetterExtHeadnotehn",
-    ".LetterExtClosinglcl",
-    ".LetterExtGeneralextl",
-    ".LetterExtSalutationlsa",
-    ".LetterExtSignaturelsig",
-    ".LetterExtDatelineldl",
-    ".LetterExtAddressladd",
-    ".LetterExtBodyTextNo-Indentltx1",
-    ".LetterExtBodyTextltx",
-    ".LetterExtPostscriptlps",
-    ".BOBAdQuoteHeadbobqh",
-    ".BOBAdQuotebobq",
-    ".BOBAdQuoteNo-Indentbobq1",
-    ".BOBAdQuoteSourcebobqs"
+    "BOBAdQuotebobq",
+    "BOBAdQuoteHeadbobqh",
+    "BOBAdQuoteNo-Indentbobq1",
+    "BOBAdQuoteSourcebobqs",
+    "Extract-BulletListextbl",
+    "Extract-BusinessCardextbc",
+    "Extract-Diaryextd",
+    "Extract-Emailextem",
+    "Extract-EmailHeadingemh",
+    "Extract-Headlineexthl",
+    "Extract-Inscriptionins",
+    "Extract-Newspapernews",
+    "Extract-Noteextn",
+    "Extract-NoteHeadextnh",
+    "Extract-NumListextnl",
+    "Extract-ScheduleofEventssch",
+    "Extract-SongLyricextsl",
+    "Extract-Telegramtel",
+    "Extract-Transcripttrans",
+    "Extract-VerseorPoetryextv",
+    "Extract-Websiteextws",
+    "Extractext",
+    "ExtractHeadexth",
+    "ExtractSourceexts",
+    "Extract-NoIndentext1",
+    "LetterExtAddressladd",
+    "LetterExtBodyTextltx",
+    "LetterExtBodyTextNo-Indentltx1",
+    "LetterExtClosinglcl",
+    "LetterExtDatelineldl",
+    "LetterExtGeneralextl",
+    "LetterExtHeadnotehn",
+    "LetterExtPostscriptlps",
+    "LetterExtSalutationlsa",
+    "LetterExtSignaturelsig"
   ],
   "epigraphparas": [
-    ".PartEpigraph-non-versepepi",
-    ".PartEpigraph-versepepiv",
-    ".PartEpigraphSourcepeps",
-    ".ChapEpigraph-non-versecepi",
-    ".ChapEpigraph-versecepiv",
-    ".ChapEpigraphSourceceps",
-    ".FMEpigraph-non-versefmepi",
-    ".FMEpigraph-versefmepiv",
-    ".FMEpigraphSourcefmeps",
-    ".Epigraph-non-verseepi",
-    ".Epigraph-verseepiv",
-    ".EpigraphSourceeps",
-    ".EpigraphinText-non-versetepi",
-    ".EpigraphinText-versetepiv",
-    ".EpigraphinText-Sourceteps"
+    "ChapEpigraph-non-versecepi",
+    "ChapEpigraph-versecepiv",
+    "ChapEpigraphSourceceps",
+    "Epigraph-non-verseepi",
+    "Epigraph-verseepiv",
+    "EpigraphinText-non-versetepi",
+    "EpigraphinText-Sourceteps",
+    "EpigraphinText-versetepiv",
+    "EpigraphSourceeps",
+    "FMEpigraph-non-versefmepi",
+    "FMEpigraph-versefmepiv",
+    "FMEpigraphSourcefmeps",
+    "PartEpigraph-non-versepepi",
+    "PartEpigraph-versepepiv",
+    "PartEpigraphSourcepeps"
   ],
   "poetryparas": [
-    ".PoemTitlevt",
-    ".PoemSubtitlevst",
-    ".PoemLevel-1Subheadvh1",
-    ".PoemLevel-2Subheadvh2",
-    ".PoemLevel-3Subheadvh3",
-    ".PoemLevel-4Subheadvh4",
-    ".VerseTextvtx",
-    ".VerseRun-inTextNo-Indentvrtx1",
-    ".VerseRun-inTextvrtx"
+    "PoemDatelinevdl",
+    "PoemDedicationvded",
+    "PoemEpigraph-non-versevepi",
+    "PoemEpigraph-versevepiv",
+    "PoemEpigraphSourceveps",
+    "PoemLevel-1Subheadvh1",
+    "PoemLevel-2Subheadvh2",
+    "PoemLevel-3Subheadvh3",
+    "PoemLevel-4Subheadvh4",
+    "PoemLevel-5Subheadvh5",
+    "PoemNumericSubheadsvhn",
+    "PoemSubtitlevst",
+    "PoemTitlevt",
+    "VerseRun-inTextvrtx",
+    "VerseRun-inTextNo-Indentvrtx1",
+    "VerseTextvtx"
   ],
   "boxparas": [
-    ".BoxHeadbh",
-    ".BoxSubheadbsh",
-    ".BoxEpigraph-non-versebepi",
-    ".BoxEpigraphSourcebeps",
-    ".BoxEpigraph-versebepiv",
-    ".BoxEpigraphSourcebeps",
-    ".BoxTextNo-Indentbtx1",
-    ".BoxHead-Level-1bh1",
-    ".BoxTextNo-Indentbtx1",
-    ".BoxListNumbnl",
-    ".BoxListNumbnl",
-    ".BoxListNumbnl",
-    ".BoxListNumbnl",
-    ".BoxHead-Level-2bh2",
-    ".BoxListBulletbbl",
-    ".BoxListBulletbbl",
-    ".BoxTextbtx",
-    ".BoxTextbtx",
-    ".BoxHead-Level-2bh2",
-    ".BoxTextNo-Indentbtx1",
-    ".BoxHead-Level-3bh3",
-    ".BoxTextbtx",
-    ".BoxHead-Level-4bh4",
-    ".BoxTextNo-Indentbtx1",
-    ".BoxExtractbext",
-    ".BoxTextbtx",
-    ".BoxHead-Level-2bh2",
-    ".BoxTextNo-Indentbtx1",
-    ".BoxHead-Level-2bh2",
-    ".BoxTextNo-Indentbtx1",
-    ".BoxTextbtx",
-    ".BoxTextbtx",
-    ".BoxSourceNotebsn",
-    ".BoxFootnotebfn"
+    "BoxEpigraph-non-versebepi",
+    "BoxEpigraph-versebepiv",
+    "BoxEpigraphSourcebeps",
+    "BoxExtract-Versebextv",
+    "BoxExtractbext",
+    "BoxFootnotebfn",
+    "BoxHead-Level-1bh1",
+    "BoxHead-Level-2bh2",
+    "BoxHead-Level-3bh3",
+    "BoxHead-Level-4bh4",
+    "BoxHead-Level-5bh5",
+    "BoxHeadbh",
+    "BoxListBulletbbl",
+    "BoxListNumbnl",
+    "BoxListUnnumbul",
+    "BoxSourceNotebsn",
+    "BoxSubheadbsh",
+    "BoxTextbtx",
+    "BoxTextNo-Indentbtx1"
   ],
   "sidebarparas": [
-    ".SidebarHeadsbh",
-    ".SidebarSubheadsbsh",
-    ".SidebarEpigraph-non-versesbepi",
-    ".SidebarEpigraphSourcesbeps",
-    ".SidebarEpigraph-versesbepiv",
-    ".SidebarEpigraphSourcesbeps",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarHead-Level-1sbh1",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarListNumsbnl",
-    ".SidebarListNumsbnl",
-    ".SidebarListNumsbnl",
-    ".SidebarListNumsbnl",
-    ".SidebarHead-Level-2sbh2",
-    ".SidebarListBulletsbbl",
-    ".SidebarListBulletsbbl",
-    ".SidebarTextsbtx",
-    ".SidebarTextsbtx",
-    ".SidebarHead-Level-2sbh2",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarHead-Level-3sbh3",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarHead-Level-4sbh4",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarExtractsbext",
-    ".SidebarTextsbtx",
-    ".SidebarHead-Level-2sbh2",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarHead-Level-2sbh2",
-    ".SidebarTextNo-Indentsbtx1",
-    ".SidebarTextsbtx",
-    ".SidebarTextsbtx",
-    ".SidebarSourceNotesbsn",
-    ".SidebarFootnotesbfn"
+    "SidebarEpigraph-non-versesbepi",
+    "SidebarEpigraph-versesbepiv",
+    "SidebarEpigraphSourcesbeps",
+    "SidebarExtract-Versesbextv",
+    "SidebarExtractsbext",
+    "SidebarFootnotesbfn",
+    "SidebarHead-Level-1sbh1",
+    "SidebarHead-Level-2sbh2",
+    "SidebarHead-Level-3sbh3",
+    "SidebarHead-Level-4sbh4",
+    "SidebarHead-Level-5sbh5",
+    "SidebarHeadsbh",
+    "SidebarListBulletsbbl",
+    "SidebarListNumsbnl",
+    "SidebarListUnnumsbul",
+    "SidebarSourceNotesbsn",
+    "SidebarSubheadsbsh",
+    "SidebarTextsbtx",
+    "SidebarTextNo-Indentsbtx1"
   ],
   "illustrationparas": [
-    ".Captioncap",
-    ".Illustrationholderill",
-    ".IllustrationSourceis",
-    ".IllustrationCreditsTextilctx",
-    ".IllustrationCreditsTextNo-Indentilctx1"
+    "Captioncap",
+    "IllustrationCreditsTextilctx",
+    "IllustrationCreditsTextNo-Indentilctx1",
+    "Illustrationholderill",
+    "IllustrationSourceis"
   ],
   "imageholders": [
-    ".Illustrationholderill"
+    "Illustrationholderill"
   ],
   "captionparas": [
-    ".Captioncap"
+    "Captioncap"
   ],
   "illustrationsrcparas": [
-    ".IllustrationSourceis"
+    "IllustrationSourceis"
   ],
   "unorderedlistparas": [
-    ".AppendixListBulletapbl",
-    ".BoxListBulletbbl",
-    ".Extract-BulletListextbl",
-    ".ListBulletbl",
-    ".SidebarListBulletsbbl"
+    "AppendixListBulletapbl",
+    "BoxListBulletbbl",
+    "Extract-BulletListextbl",
+    "ListBulletbl",
+    "SidebarListBulletsbbl"
   ],
   "orderedlistparas": [
-    ".AppendixListNumapnl",
-    ".BoxListNumbnl",
-    ".Extract-NumListextnl",
-    ".ListAlphaal",
-    ".ListNumnl",
-    ".SidebarListNumsbnl"
+    "AppendixListNumapnl",
+    "BoxListNumbnl",
+    "Extract-NumListextnl",
+    "ListAlphaal",
+    "ListNumnl",
+    "SidebarListNumsbnl"
   ],
   "unorderedsublistparas": [
-    ".ListBulletSubentrybsl"
+    "ListBulletSubentrybsl"
   ],
   "orderedsublistparas": [
-    ".ListAlphaSubentryasl",
-    ".ListNumSubentrynsl"
-  ],
-  "footnotetextselector": [
-    "div.footnote"
+    "ListAlphaSubentryasl",
+    "ListNumSubentrynsl"
   ],
   "omitparas": [
-    ".PageBreakpb",
-    ".SectionBreaksbr",
-    ".PartStartpts",
-    ".PartEndpte",
-    ".ChapNumbercn"
-  ]
+    "SectionBreaksbr"
+  ],
+  "toplevelheads": {
+    "Section-Front-Salessfs": "preface",
+    "Section-Halftitlesht": "halftitlepage",
+    "Section-Series-Pagessp": "preface",
+    "Section-Ad-Cardsac": "preface",
+    "Section-Titlepagesti": "titlepage",
+    "Section-Copyrightscr": "copyright-page",
+    "Section-Dedicationsde": "dedication",
+    "Section-Epigraphsepi": "preface",
+    "Section-Contentsstc": "preface",
+    "Section-Forewordsfw": "foreword",
+    "Section-Prefacespf": "preface",
+    "Section-Blank-Pagesbl": "preface",
+    "Section-Intro-Frontmattersif": "introduction",
+    "Section-Intro-Chaptersic": "chapter",
+    "Section-Partspt": "part",
+    "Section-Chapterscp": "chapter",
+    "Section-Conclusionscl": "conclusion",
+    "Section-Appendixsap": "appendix",
+    "Section-Afterwordsaw": "afterword",
+    "Section-Acknowledgmentssak": "acknowledgments",
+    "Section-Glossarysgl": "glossary",
+    "Section-Notessnt": "appendix",
+    "Section-Bibliographysbi": "bibliography",
+    "Section-Excerpt-Openerseo": "appendix",
+    "Section-Excerpt-Chaptersec": "appendix",
+    "Section-About-Authorsaa": "appendix",
+    "Section-Back-Adsba": "appendix",
+    "Section-Indexsin": "index"
+  }
 }
