added '.'s to classes, moved footnotes back to the .js

--- a/style_config.json
+++ b/style_config.json
@@ -1,212 +1,212 @@
 {
   "partheads": [
-    "Section-Partspt"
+    ".Section-Partspt"
   ],
   "headingparas": [
-    "AboutAuthorTextHeadatah",
-    "AdCardMainHeadacmh",
-    "AppendixHeadaph",
-    "BMHeadbmh",
-    "BMHeadALTabmh",
-    "BMHeadNonprintingbmhnp",
-    "BOBAdTitlebobt",
-    "ChapTitlect",
-    "ChapTitleALTact",
-    "ChapTitleNonprintingctnp",
-    "FMHeadfmh",
-    "FMHeadALTafmh",
-    "FMHeadNonprintingfmhnp",
-    "FrontSalesTitlefst",
-    "HalftitleBookTitlehtit",
-    "PartNumberpn",
-    "PartTitlept",
-    "TitlepageBookTitletit",
-    "VolumeNumbervoln",
-    "VolumeTitlevolt"
+    ".AboutAuthorTextHeadatah",
+    ".AdCardMainHeadacmh",
+    ".AppendixHeadaph",
+    ".BMHeadbmh",
+    ".BMHeadALTabmh",
+    ".BMHeadNonprintingbmhnp",
+    ".BOBAdTitlebobt",
+    ".ChapTitlect",
+    ".ChapTitleALTact",
+    ".ChapTitleNonprintingctnp",
+    ".FMHeadfmh",
+    ".FMHeadALTafmh",
+    ".FMHeadNonprintingfmhnp",
+    ".FrontSalesTitlefst",
+    ".HalftitleBookTitlehtit",
+    ".PartNumberpn",
+    ".PartTitlept",
+    ".TitlepageBookTitletit",
+    ".VolumeNumbervoln",
+    ".VolumeTitlevolt"
   ],
   "extractparas": [
-    "BOBAdQuotebobq",
-    "BOBAdQuoteHeadbobqh",
-    "BOBAdQuoteNo-Indentbobq1",
-    "BOBAdQuoteSourcebobqs",
-    "Extract-BulletListextbl",
-    "Extract-BusinessCardextbc",
-    "Extract-Diaryextd",
-    "Extract-Emailextem",
-    "Extract-EmailHeadingemh",
-    "Extract-Headlineexthl",
-    "Extract-Inscriptionins",
-    "Extract-Newspapernews",
-    "Extract-Noteextn",
-    "Extract-NoteHeadextnh",
-    "Extract-NumListextnl",
-    "Extract-ScheduleofEventssch",
-    "Extract-SongLyricextsl",
-    "Extract-Telegramtel",
-    "Extract-Transcripttrans",
-    "Extract-VerseorPoetryextv",
-    "Extract-Websiteextws",
-    "Extractext",
-    "ExtractHeadexth",
-    "ExtractSourceexts",
-    "Extract-NoIndentext1",
-    "LetterExtAddressladd",
-    "LetterExtBodyTextltx",
-    "LetterExtBodyTextNo-Indentltx1",
-    "LetterExtClosinglcl",
-    "LetterExtDatelineldl",
-    "LetterExtGeneralextl",
-    "LetterExtHeadnotehn",
-    "LetterExtPostscriptlps",
-    "LetterExtSalutationlsa",
-    "LetterExtSignaturelsig"
+    ".BOBAdQuotebobq",
+    ".BOBAdQuoteHeadbobqh",
+    ".BOBAdQuoteNo-Indentbobq1",
+    ".BOBAdQuoteSourcebobqs",
+    ".Extract-BulletListextbl",
+    ".Extract-BusinessCardextbc",
+    ".Extract-Diaryextd",
+    ".Extract-Emailextem",
+    ".Extract-EmailHeadingemh",
+    ".Extract-Headlineexthl",
+    ".Extract-Inscriptionins",
+    ".Extract-Newspapernews",
+    ".Extract-Noteextn",
+    ".Extract-NoteHeadextnh",
+    ".Extract-NumListextnl",
+    ".Extract-ScheduleofEventssch",
+    ".Extract-SongLyricextsl",
+    ".Extract-Telegramtel",
+    ".Extract-Transcripttrans",
+    ".Extract-VerseorPoetryextv",
+    ".Extract-Websiteextws",
+    ".Extractext",
+    ".ExtractHeadexth",
+    ".ExtractSourceexts",
+    ".Extract-NoIndentext1",
+    ".LetterExtAddressladd",
+    ".LetterExtBodyTextltx",
+    ".LetterExtBodyTextNo-Indentltx1",
+    ".LetterExtClosinglcl",
+    ".LetterExtDatelineldl",
+    ".LetterExtGeneralextl",
+    ".LetterExtHeadnotehn",
+    ".LetterExtPostscriptlps",
+    ".LetterExtSalutationlsa",
+    ".LetterExtSignaturelsig"
   ],
   "epigraphparas": [
-    "ChapEpigraph-non-versecepi",
-    "ChapEpigraph-versecepiv",
-    "ChapEpigraphSourceceps",
-    "Epigraph-non-verseepi",
-    "Epigraph-verseepiv",
-    "EpigraphinText-non-versetepi",
-    "EpigraphinText-Sourceteps",
-    "EpigraphinText-versetepiv",
-    "EpigraphSourceeps",
-    "FMEpigraph-non-versefmepi",
-    "FMEpigraph-versefmepiv",
-    "FMEpigraphSourcefmeps",
-    "PartEpigraph-non-versepepi",
-    "PartEpigraph-versepepiv",
-    "PartEpigraphSourcepeps"
+    ".ChapEpigraph-non-versecepi",
+    ".ChapEpigraph-versecepiv",
+    ".ChapEpigraphSourceceps",
+    ".Epigraph-non-verseepi",
+    ".Epigraph-verseepiv",
+    ".EpigraphinText-non-versetepi",
+    ".EpigraphinText-Sourceteps",
+    ".EpigraphinText-versetepiv",
+    ".EpigraphSourceeps",
+    ".FMEpigraph-non-versefmepi",
+    ".FMEpigraph-versefmepiv",
+    ".FMEpigraphSourcefmeps",
+    ".PartEpigraph-non-versepepi",
+    ".PartEpigraph-versepepiv",
+    ".PartEpigraphSourcepeps"
   ],
   "poetryparas": [
-    "PoemDatelinevdl",
-    "PoemDedicationvded",
-    "PoemEpigraph-non-versevepi",
-    "PoemEpigraph-versevepiv",
-    "PoemEpigraphSourceveps",
-    "PoemLevel-1Subheadvh1",
-    "PoemLevel-2Subheadvh2",
-    "PoemLevel-3Subheadvh3",
-    "PoemLevel-4Subheadvh4",
-    "PoemLevel-5Subheadvh5",
-    "PoemNumericSubheadsvhn",
-    "PoemSubtitlevst",
-    "PoemTitlevt",
-    "VerseRun-inTextvrtx",
-    "VerseRun-inTextNo-Indentvrtx1",
-    "VerseTextvtx"
+    ".PoemDatelinevdl",
+    ".PoemDedicationvded",
+    ".PoemEpigraph-non-versevepi",
+    ".PoemEpigraph-versevepiv",
+    ".PoemEpigraphSourceveps",
+    ".PoemLevel-1Subheadvh1",
+    ".PoemLevel-2Subheadvh2",
+    ".PoemLevel-3Subheadvh3",
+    ".PoemLevel-4Subheadvh4",
+    ".PoemLevel-5Subheadvh5",
+    ".PoemNumericSubheadsvhn",
+    ".PoemSubtitlevst",
+    ".PoemTitlevt",
+    ".VerseRun-inTextvrtx",
+    ".VerseRun-inTextNo-Indentvrtx1",
+    ".VerseTextvtx"
   ],
   "boxparas": [
-    "BoxEpigraph-non-versebepi",
-    "BoxEpigraph-versebepiv",
-    "BoxEpigraphSourcebeps",
-    "BoxExtract-Versebextv",
-    "BoxExtractbext",
-    "BoxFootnotebfn",
-    "BoxHead-Level-1bh1",
-    "BoxHead-Level-2bh2",
-    "BoxHead-Level-3bh3",
-    "BoxHead-Level-4bh4",
-    "BoxHead-Level-5bh5",
-    "BoxHeadbh",
-    "BoxListBulletbbl",
-    "BoxListNumbnl",
-    "BoxListUnnumbul",
-    "BoxSourceNotebsn",
-    "BoxSubheadbsh",
-    "BoxTextbtx",
-    "BoxTextNo-Indentbtx1"
+    ".BoxEpigraph-non-versebepi",
+    ".BoxEpigraph-versebepiv",
+    ".BoxEpigraphSourcebeps",
+    ".BoxExtract-Versebextv",
+    ".BoxExtractbext",
+    ".BoxFootnotebfn",
+    ".BoxHead-Level-1bh1",
+    ".BoxHead-Level-2bh2",
+    ".BoxHead-Level-3bh3",
+    ".BoxHead-Level-4bh4",
+    ".BoxHead-Level-5bh5",
+    ".BoxHeadbh",
+    ".BoxListBulletbbl",
+    ".BoxListNumbnl",
+    ".BoxListUnnumbul",
+    ".BoxSourceNotebsn",
+    ".BoxSubheadbsh",
+    ".BoxTextbtx",
+    ".BoxTextNo-Indentbtx1"
   ],
   "sidebarparas": [
-    "SidebarEpigraph-non-versesbepi",
-    "SidebarEpigraph-versesbepiv",
-    "SidebarEpigraphSourcesbeps",
-    "SidebarExtract-Versesbextv",
-    "SidebarExtractsbext",
-    "SidebarFootnotesbfn",
-    "SidebarHead-Level-1sbh1",
-    "SidebarHead-Level-2sbh2",
-    "SidebarHead-Level-3sbh3",
-    "SidebarHead-Level-4sbh4",
-    "SidebarHead-Level-5sbh5",
-    "SidebarHeadsbh",
-    "SidebarListBulletsbbl",
-    "SidebarListNumsbnl",
-    "SidebarListUnnumsbul",
-    "SidebarSourceNotesbsn",
-    "SidebarSubheadsbsh",
-    "SidebarTextsbtx",
-    "SidebarTextNo-Indentsbtx1"
+    ".SidebarEpigraph-non-versesbepi",
+    ".SidebarEpigraph-versesbepiv",
+    ".SidebarEpigraphSourcesbeps",
+    ".SidebarExtract-Versesbextv",
+    ".SidebarExtractsbext",
+    ".SidebarFootnotesbfn",
+    ".SidebarHead-Level-1sbh1",
+    ".SidebarHead-Level-2sbh2",
+    ".SidebarHead-Level-3sbh3",
+    ".SidebarHead-Level-4sbh4",
+    ".SidebarHead-Level-5sbh5",
+    ".SidebarHeadsbh",
+    ".SidebarListBulletsbbl",
+    ".SidebarListNumsbnl",
+    ".SidebarListUnnumsbul",
+    ".SidebarSourceNotesbsn",
+    ".SidebarSubheadsbsh",
+    ".SidebarTextsbtx",
+    ".SidebarTextNo-Indentsbtx1"
   ],
   "illustrationparas": [
-    "Captioncap",
-    "IllustrationCreditsTextilctx",
-    "IllustrationCreditsTextNo-Indentilctx1",
-    "Illustrationholderill",
-    "IllustrationSourceis"
+    ".Captioncap",
+    ".IllustrationCreditsTextilctx",
+    ".IllustrationCreditsTextNo-Indentilctx1",
+    ".Illustrationholderill",
+    ".IllustrationSourceis"
   ],
   "imageholders": [
-    "Illustrationholderill"
+    ".Illustrationholderill"
   ],
   "captionparas": [
-    "Captioncap"
+    ".Captioncap"
   ],
   "illustrationsrcparas": [
-    "IllustrationSourceis"
+    ".IllustrationSourceis"
   ],
   "unorderedlistparas": [
-    "AppendixListBulletapbl",
-    "BoxListBulletbbl",
-    "Extract-BulletListextbl",
-    "ListBulletbl",
-    "SidebarListBulletsbbl"
+    ".AppendixListBulletapbl",
+    ".BoxListBulletbbl",
+    ".Extract-BulletListextbl",
+    ".ListBulletbl",
+    ".SidebarListBulletsbbl"
   ],
   "orderedlistparas": [
-    "AppendixListNumapnl",
-    "BoxListNumbnl",
-    "Extract-NumListextnl",
-    "ListAlphaal",
-    "ListNumnl",
-    "SidebarListNumsbnl"
+    ".AppendixListNumapnl",
+    ".BoxListNumbnl",
+    ".Extract-NumListextnl",
+    ".ListAlphaal",
+    ".ListNumnl",
+    ".SidebarListNumsbnl"
   ],
   "unorderedsublistparas": [
-    "ListBulletSubentrybsl"
+    ".ListBulletSubentrybsl"
   ],
   "orderedsublistparas": [
-    "ListAlphaSubentryasl",
-    "ListNumSubentrynsl"
+    ".ListAlphaSubentryasl",
+    ".ListNumSubentrynsl"
   ],
   "omitparas": [
-    "SectionBreaksbr"
+    ".SectionBreaksbr"
   ],
   "toplevelheads": {
-    "Section-Front-Salessfs": "preface",
-    "Section-Halftitlesht": "halftitlepage",
-    "Section-Series-Pagessp": "preface",
-    "Section-Ad-Cardsac": "preface",
-    "Section-Titlepagesti": "titlepage",
-    "Section-Copyrightscr": "copyright-page",
-    "Section-Dedicationsde": "dedication",
-    "Section-Epigraphsepi": "preface",
-    "Section-Contentsstc": "preface",
-    "Section-Forewordsfw": "foreword",
-    "Section-Prefacespf": "preface",
-    "Section-Blank-Pagesbl": "preface",
-    "Section-Intro-Frontmattersif": "introduction",
-    "Section-Intro-Chaptersic": "chapter",
-    "Section-Partspt": "part",
-    "Section-Chapterscp": "chapter",
-    "Section-Conclusionscl": "conclusion",
-    "Section-Appendixsap": "appendix",
-    "Section-Afterwordsaw": "afterword",
-    "Section-Acknowledgmentssak": "acknowledgments",
-    "Section-Glossarysgl": "glossary",
-    "Section-Notessnt": "appendix",
-    "Section-Bibliographysbi": "bibliography",
-    "Section-Excerpt-Openerseo": "appendix",
-    "Section-Excerpt-Chaptersec": "appendix",
-    "Section-About-Authorsaa": "appendix",
-    "Section-Back-Adsba": "appendix",
-    "Section-Indexsin": "index"
+    ".Section-Front-Salessfs": "preface",
+    ".Section-Halftitlesht": "halftitlepage",
+    ".Section-Series-Pagessp": "preface",
+    ".Section-Ad-Cardsac": "preface",
+    ".Section-Titlepagesti": "titlepage",
+    ".Section-Copyrightscr": "copyright-page",
+    ".Section-Dedicationsde": "dedication",
+    ".Section-Epigraphsepi": "preface",
+    ".Section-Contentsstc": "preface",
+    ".Section-Forewordsfw": "foreword",
+    ".Section-Prefacespf": "preface",
+    ".Section-Blank-Pagesbl": "preface",
+    ".Section-Intro-Frontmattersif": "introduction",
+    ".Section-Intro-Chaptersic": "chapter",
+    ".Section-Partspt": "part",
+    ".Section-Chapterscp": "chapter",
+    ".Section-Conclusionscl": "conclusion",
+    ".Section-Appendixsap": "appendix",
+    ".Section-Afterwordsaw": "afterword",
+    ".Section-Acknowledgmentssak": "acknowledgments",
+    ".Section-Glossarysgl": "glossary",
+    ".Section-Notessnt": "appendix",
+    ".Section-Bibliographysbi": "bibliography",
+    ".Section-Excerpt-Openerseo": "appendix",
+    ".Section-Excerpt-Chaptersec": "appendix",
+    ".Section-About-Authorsaa": "appendix",
+    ".Section-Back-Adsba": "appendix",
+    ".Section-Indexsin": "index"
   }
 }
